# educe

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  README_EN.md  design-mockup.html  docker-compose.yml  main.py  pyproject.toml  reproduce_descent.py  start.sh
.educe/config/: shell_taxonomy.yaml
deepforge/: __init__.py
deepforge/agents/: __init__.py  architect.py  builder.py  crowd_user.py  engineer.py  memory_keeper.py  planner.py  product_manager.py  project_manager.py  reviewer.py  supervisor.py  tester.py
deepforge/cli/: app.py
deepforge/core/: __init__.py  action_executor.py  activation_engine.py  activation_evolver.py  activation_evolver_v04.py  activation_evolver_v04b.py  activity_log.py  agent.py  agentic_loop.py  behavior.py  behavior_learner.py  benchmark.py  checklist_judge.py  cognitive_state.py  config.py  connector.py  context_analyzer.py  context_manager.py  conversation.py  credibility_engine.py  domain_engine.py  domain_router.py  event_bus.py  evolution.py  execution_loop.py  expert_router.py  file_handler.py  hallucination_guard.py  judge.py  knowledge.py  knowledge_distiller.py  message.py  migrate_to_unified.py  observer.py  orchestrator.py  process_supervisor.py  quality_tracker.py  response_validator.py  self_evolver.py  session_state.py  (+10 more)
deepforge/memory/: store.py
deepforge/models/: router.py
deepforge/skills/: attribution.py  chrome_game.py  registry.py
deepforge/templates/: deepforge.example.yaml  educe.example.yaml
deepforge/tools/: artifacts.py  preview.py  verifier.py
deepforge/web/: server.py
deepforge_metrics/: cli.py  config.py  engine.py  gate.py
docs/: ARCHITECTURE.md  BOUNDARY_REDESIGN.md  FRONTEND_DESIGN.md  PROCESS_TRANSPARENCY.md  PROJECT.md  SESSION11_ARCHITECTURE.md  SESSION12_SUMMARY.md  STATUS.md  SYSTEM_UPGRADE.md  VERIFY_COMPILE_LOOP.md  VISION.md  architecture_plan.md  benchmark-runner-design.md  color-schemes.html  context-sig-design.md  descent_analysis.md  e2e-test-knowledge-system.md  engineer_output_eval.md  execution_log.md  experiment_design.md  implementation_roadmap.md  improvement_log.md  log-feedback-design.md  logging-redesign.md  logo-options.html  metrics_v1.md  phase0_checklist.md  project_plan_by_pm_agent.md  random_seed_testing.md  skill-multilevel-design.md  stage-assessment-opus.md  stage2-design.md
docs/assets/: demo.cast
docs/experiments/: ab_report_20260529_181721.txt  ab_test_20260529_181721.json  phase0_results.json
educe/: __init__.py  paths.py
educe/agents/: builder.py  (+11 more)
eval/: compare_tasks.py  metrics_config.yaml
examples/: config_examples.md  quickstart.md
experiments/: flywheel_v1.py
scripts/: bcb_batch.json  compare.py  day4_perturbation_test.py  day5_prober_full.py  day5_prober_verify.py  e2e_extreme_multifile.py  e2e_extreme_recovery.py  e2e_extreme_recovery_v2.py  e2e_strict_convergence.py  eval_convergence.py  eval_convergence_failures.py  pre-commit  sample_selector.py  security_check.py  self_evolve.py  self_evolve_v2.py  simulate_descent_demo.py
tests/: ab_bare_vs_full.py  ab_experiment.py  acceptance_tasks.py  activation_benchmark.py  analyze_marginal.py  benchmark_cases.py  benchmark_e2e.md  benchmark_quick_test.py  benchmark_qwen36_full.json  benchmark_qwen36_l1.json  benchmark_qwen36_run2.json  benchmark_qwen36_sample.json  benchmark_v2.md  benchmark_variance.json  conftest.py  demo_behavior_learning.py  e2e_behavior_3day.py  e2e_browser_test.py  e2e_real_project.py  evolve_active.py  experiment_implicit_preference.py  experiment_influence_attribution.py  judge_l3_kimi_k2.json  opus_benchmark_strategy.md  opus_brainstorm_day4_5_review.md  opus_brainstorm_round1_6.md  opus_clarification_architecture.md  opus_clarification_design.md  opus_coldstart_design.md  opus_connector_discussion.md  opus_connector_purpose.md  opus_connector_review.md  opus_connector_vision.md  opus_day_summary.md  opus_discussion_result.md  opus_edit_file_design.md  opus_product_direction.md  opus_roadmap.md  opus_toy_or_tool.md  opus_v04_design.md  (+20 more)
web/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
(+337 files in other folders)
