[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "educe"
version = "0.2.0"
description = "Educe - Governance layer between humans and AI models"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Educe Team" }]
keywords = ["ai", "agent", "llm", "governance", "harness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "openai>=1.0.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
web = ["fastapi>=0.100.0", "uvicorn>=0.23.0", "websockets>=11.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.1.0"]
all = ["educe[web,dev]"]

[project.scripts]
educe = "educe.cli.app:main"
df = "educe.cli.app:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["educe"]
